<resources>
    <string name="app_name">Shout!</string>
    <string name="facebook_app_id">365470950456156</string>
    <string name="facebook_application_id" translatable="false">365470950456156</string>
    <!-- Facebook Application ID, prefixed by 'fb'.  Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fb365470950456156</string>

    <!-- Sign-in Strings-->
    <string name="sign_in_cancelled">Sign in attempt has been cancelled.</string>
    <string name="no_internet_connection">No internet connection. Please check connection and try again.</string>
    <string name="log_out">Log Out</string>
    <string name="welcome_accountname">Welcome accountName !</string>
    <string name="menu_map">Discovery</string>
    <string name="menu_chatrooms">Chat Rooms</string>
    <string name="menu_pm">Messages</string>
    <string name="menu_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fb_profile_picture">facebook_profile_picture</string>
    <string name="my_fb_likes_label">My Facebook Likes:</string>
    <string name="title_activity_discovery">Discovery</string>
    <string name="create_room">Create Room</string>
    <string name="crc_title">Title:</string>
    <string name="crc_header">New Chat Room</string>
    <string name="crc_category">Category:</string>
    <string name="crc_image">Image:</string>
    <string name="crc_range">Range:</string>
    <string name="crc_create">Create</string>
    <string name="crc_ttl">TimeToLive:</string>
    <string name="crc_cancel_dialog_message">Are you sure that you want to cancel the creation of the chat room ?</string>
    <string name="crc_cancel_dialog_title">Cancel Creation?</string>
    <string name="yes">Yes</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="ok">ok</string>
    <string name="crc_form_incomplete">Please ensure that all fields have been completed and try again.</string>
    <string name="crc_form_incomplete_title">Missing Information</string>
    <string name="common_fb_likes_label">Likes in common:</string>
    <string name="profile_name">Profile Name</string>
    <string name="leaveChatroom_cancel_dialog_title">Leave Chatroom</string>
    <string name="leaveChatroom_cancel_dialog_message">Are you sure?\n The chatroom can be joined again later as soon as it has not expired and is in range.</string>
    <string name="deletePM_dialog_message">Are you sure?\nThe conversation will also be deleted for the other user, and it cannot be undone.</string>
    <string name="deletePM_dialog_title">Delete Conversation ?</string>

    <string-array name="categories_array">
        <item></item>
        <item>Events</item>
        <item>Games</item>
        <item>Movies</item>
        <item>Sports</item>
        <item>Music</item>
        <item>Other</item>
    </string-array>
</resources>
