<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.MyProfileFragment"
    android:background="@color/white">

   <TextView
        android:text="@string/welcome_accountname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_welcome"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="15dp"
        android:textStyle="normal|bold"
        android:textSize="20sp"
        android:textColor="@color/authui_colorActivated" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_mylikes"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_myLikes"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/white"/>

    <TextView
        android:text="@string/my_fb_likes_label"
        android:layout_width="match_parent"
        android:id="@+id/tv_myLikes"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/img_profilePic"
        android:layout_alignParentStart="true"
        android:layout_marginStart="13dp"
        android:textColor="@color/authui_colorActivated"/>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ImageView
        app:srcCompat="@drawable/com_facebook_profile_picture_blank_portrait"
        android:id="@+id/img_profilePic"
        android:contentDescription="@string/fb_profile_picture"
        android:layout_marginTop="15dp"
        android:layout_width="200dp"
        android:layout_below="@+id/tv_welcome"
        android:layout_centerHorizontal="true"
        android:layout_height="200dp" />

</RelativeLayout>
